--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: YanZhu Wu
 # tagline: Two roads diverged in woods, I took the one less traveled by.
-description: Two roads diverged in woods, I took the one less traveled by.
+# description: Two roads diverged in woods, I took the one less traveled by.
 #Comment out url when working locally to resolve base urls correctly
 url: https://cerulean0242.github.io
 
@@ -11,11 +11,11 @@ owner:
 #  bio:
   email: wuyanzhu@163.com
   # Social networking links are used in author-bio sidebar. Update and remove as you like.
-  twitter: #lancecai2002
+  # twitter: #lancecai2002
   # facebook: caihanlin2002
-  github: #GuangLun2000
-  linkedin: #hanlin-cai-07b53b23b
-  scholar: #https://scholar.google.com/citations?user=8igSoWgAAAAJ
+  # github: #GuangLun2000
+  # linkedin: #hanlin-cai-07b53b23b
+  # scholar: #https://scholar.google.com/citations?user=8igSoWgAAAAJ
   # instagram: lancecai2002
   # lastfm:
   # tumblr:
@@ -74,8 +74,8 @@ kramdown:
 
 
 # disqus settings:
-disqus:
-  shortname: lancecai
+# disqus:
+# shortname: lancecai
 
 include: [".htaccess"]
 exclude: ["lib", "config.rb", "Capfile", "config", "log", "Rakefile", "Rakefile.rb", "tmp", "less", "minimal-mistakes.sublime-project", "minimal-mistakes.sublime-workspace"]
