--- a/_config.yml
+++ b/_config.yml
@@ -2,14 +2,14 @@ title: HUANG YAOSHI
 # tagline: Two roads diverged in woods, I took the one less traveled by.
 # description: Two roads diverged in woods, I took the one less traveled by.
 #Comment out url when working locally to resolve base urls correctly
-url: https://cerulean0242.github.io
+url: https://lilifu.me
 
 # Owner/author information
 owner:
-  name: YanZhu Wu
+  name: LIFU LI(李立富)
   avatar: wuyanzhu.jpg
 #  bio:
-  email: wuyanzhu@163.com
+  #email: wuyanzhu@163.com
   # Social networking links are used in author-bio sidebar. Update and remove as you like.
   # twitter: #lancecai2002
   # facebook: caihanlin2002
@@ -32,7 +32,7 @@ owner:
 # Links to include in top navigation
 # For external links add external: true
 links:
-  - title: About Me
+  - title: #About Me
     url: /
   - #title: Publications
     #url: /publications/
@@ -40,8 +40,8 @@ links:
     #url: /projects/
   - #title: Awards
     #url: /awards/
-  - title: Hobbies
-    url: /hobbies/
+  - #title: Hobbies
+    #url: /hobbies/
   - #title: Blogs
     #url: /blogs/
 
