--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ url: https://lilifu.me
 
 # Owner/author information
 owner:
-  #name: LIFU LI(李立富)
+  name: LIFU LI(李立富)
   #avatar: wuyanzhu.jpg
 #  bio:
   #email: wuyanzhu@163.com
