--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: 
+title: LIFU LI
 # tagline: Two roads diverged in woods, I took the one less traveled by.
 # description: Two roads diverged in woods, I took the one less traveled by.
 #Comment out url when working locally to resolve base urls correctly
@@ -6,7 +6,7 @@ url: https://lilifu.me
 
 # Owner/author information
 owner:
-  name: #LIFU LI(李立富)
+  name: LIFU LI(李立富)
   #avatar: wuyanzhu.jpg
 #  bio:
   #email: wuyanzhu@163.com
